--- a/css/skill.css
+++ b/css/skill.css
@@ -45,6 +45,7 @@
   transition: 1s;
   letter-spacing: 2px;
   padding-left: 22px;
+  color: #fff;
 }
 .skill-level.html{
   background-color: #ee7036;
