--- a/css/about.css
+++ b/css/about.css
@@ -16,12 +16,11 @@ section#about .wrap h3{
 }
 section#about .wrap .infor {
    /*! width: 50%; */
-   background-color: #efd1ce;
    border-radius: 50px;
    padding: 50px 50px;
    /*! transform: rotate(-5deg); */
    margin-left: 34px;
-   background: linear-gradient(180deg,#ffc683 0%,rgb(238, 238, 236) 100%);
+   background: linear-gradient(180deg,#f9f3ec 0%,rgb(193, 216, 230) 100%);
 }
 section#about .wrap .infor ul{
    
@@ -40,7 +39,7 @@ section#about .educate{
    border-radius: 50px;
    margin-left: 200px;
    /*! transform: rotate(-8deg); */
-   background: linear-gradient(180deg,#d2dfe5 0%,rgb(191, 180, 179) 100%);
+   background: linear-gradient(180deg,#f9f3ec 0%,rgb(193, 218, 230) 100%);
    margin-top: 60px;
 }
 section#about small{
@@ -129,18 +128,17 @@ section#about .circle{
 }
 section#about .wrap .intro{
    
-   background-color: antiquewhite;
-   width: 50%;
-   padding: 50px 50px;
+   width: 30%;
+   padding: 50px 45px;
    border-radius: 50px;
-   transform: translateX(72%) translateY(-255%);
-   background: linear-gradient(180deg,#ffcdcf 0%,rgb(194, 191, 198) 100%);
-   margin-left: 30px;
+   transform: translateX(145%) translateY(-179%);
+   background: linear-gradient(180deg,#f9f3ec 0%,rgb(193, 214, 230) 100%);
 }
-section#about .wrap .intro p{
+section#about .wrap .intro img{
    
-   line-height: 1.4;
-   letter-spacing: 1px;
+   width: 312px;
+   height: 420px;
+   border-radius: 25px;
 }
 section#about .wrap .intro span{
    
