--- a/css/contact.css
+++ b/css/contact.css
@@ -73,27 +73,27 @@ section#contact .wrap .contact-info ul li:nth-child(1) a{
   width: 50px;
   height: 50px;
   display: block;
+  background-size: cover;
 }
 section#contact .wrap .contact-info ul li:nth-child(2) a{
-  background-image: url(../img/insta.png);
+  background-image: url(../img/instagram.png);
   width: 50px;
   height: 50px;
   display: block;
+  background-size: cover;
 }
 section#contact .wrap .contact-info ul li:nth-child(3) a{
   background-image: url(../img/github.png);
   width: 50px;
   height: 50px;
   display: block;
+  background-size: cover;
 }
 section#contact .wrap .contact-info ul li:nth-child(4) a{
   background-image: url(../img/git.png);
   width: 50px;
   height: 50px;
   display: block
-}
-section#contact .wrap .contact-info ul li a:hover{
-  color: #ffc683;
 }
 section#contact .wrap .contact-form{
   
